@@ -2064,3 +2064,9 @@ Fixed issue with vchars.mta and symbols.mta not being installed in
 the appropriate metafile library location, with help from Rob G.
 
 Added ability to give quoted strings to output= directive in rfluxmtx.
+
+****** COMPATIBILITY CHANGE ********
+Added ability to digest color (CIE-XYZ) input in pabopto2bsdf.
+This change alters the .sir (interpolant) format, so these files
+will need to be regenerated.  Use the new "#colorimetry: CIE-XYZ" tag
+to enable on input.
